fix: update button font size and padding to prevent overlap

--- a/src/components/Dropdown/styles.module.scss
+++ b/src/components/Dropdown/styles.module.scss
@@ -118,7 +118,13 @@ button.chevron {
 .option > button > span {
   text-align: left;
   padding-left: 44px;
-  padding-right: 10px;
+  padding-right: 38px;
   display: inline-block;
   width: 100%;
+  font-size: 0.75rem;
+
+  @media (min-width: $breakpoint-tablet) {
+    font-size: 1rem;
+    padding-right: 10px;
+  }
 }
